Made some more changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         }
     </script>
-I was here
+I was here, and so were you!
 <style>
         #my_button {
             background-color: rgb(72, 34, 177);
