--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 
             console.log({my_text,starbucks,coffee })
         }
+
+        class Car  { 
+
+            constructor(name, age, color){
+                this.name = name;
+                this.age = age;
+                this.color = color;
+            }
+
+            isMyCarCool(){
+                if(this.age <2000){
+                    return ' this car sucks'
+                }else{
+                    return ' this car is cool'
+                }
+            }
+        }
+
+        let honda = new Car('Honda civic', 190=, "red")
+        console.log({honda})
+        console.log(honda.isMyCarCool())
+
+
     </script>
 
 <style>
