--- a/js-examples/arrays.htm
+++ b/js-examples/arrays.htm
@@ -21,14 +21,14 @@
     <button onclick="myFunction()">Click Here</button>
 
     <script>
-        // Getting the whole array
+        // Returns the whole array
         var animals = ["Monkey", "Zebra", "Lion", "Giraffe"];
         document.getElementById("demo").innerHTML = animals;
     </script>
 
 
     <script>
-        // Getting the first index 
+        // Returns the second index
         var cars = ["Toyota", "Volkswagen", "Hyundai", "Ford", "Chevrolet"];
         document.getElementById("demo2").innerHTML = cars[1];
     </script>
@@ -43,21 +43,21 @@
 
 
     <script>
-        // Returns the first index
+        // Returns the first index 
         var person = ["John", "Smith", 50];
         document.getElementById("demo4").innerHTML = person[0];
     </script>
 
 
     <script>
-        // Returns the persons last name
+        // Returns "lastName" of person
         var person = { firstName: "John", lastName: "Smith", age: 50 };
         document.getElementById("demo5").innerHTML = person["lastName"];
     </script>
 
 
     <script>
-        // Getting the length of the array
+        // Returns the length of the array
         var shapes = ["Circle", "Triangle", "Square"];
         document.getElementById("demo6").innerHTML = shapes.length;
     </script>
@@ -92,7 +92,7 @@
 
 
     <script>
-        // Arrays always use numbered indexes
+        // Arrays always use numbered indexes and objects use named indexes
         var color = [];
         color[0] = "Red";
         color[1] = "Blue";
@@ -109,7 +109,7 @@
 
 
     <script>
-        // Returns the array as an object
+        // Returns the array is an object
         var fruits = ["Banana", "Orange", "Apple", "Mango"];
         document.getElementById("demo12").innerHTML = typeof fruits;
     </script>
